fix vertical jumping login-container on medium size screens

--- a/scss/boost_union/post.scss
+++ b/scss/boost_union/post.scss
@@ -410,7 +410,7 @@
 /* Keep login container vertically centered on page load, but allow it to grow downward only.
    The container starts centered, but when content changes (tabs switch), it grows downward
    from that position without shifting the top. */
-@include media-breakpoint-up(md) {
+@include media-breakpoint-up(sm) {
     .login-wrapper:has(.loginform #login-layout-tabs) {
         /* Change to column to control vertical spacing. */
         flex-direction: column;
